# rumi-protocol-v2

./: .gitignore  ACKNOWLEDGMENTS.md  AGENTS.md  Cargo.toml  LICENSE  README.md  SECURITY.md  TEST_REPORT.txt  canister_ids.json  canister_ids.json.bak  deploy_mainnet.sh  dfx.json  icp.yaml  package-lock.json  package.json  test_treasury.sh  test_treasury_integration.sh  update_icusd_logo.sh
src/flaky_ledger/: Cargo.toml  flaky_ledger.did
src/flaky_ledger/src/: lib.rs
src/liquidation_bot/: Cargo.toml  liquidation_bot.did
src/liquidation_bot/src/: history.rs  icpswap.rs  lib.rs  memory.rs  process.rs  state.rs  swap.rs
src/rumi_3pool/: Cargo.toml  rumi_3pool.did
src/rumi_3pool/src/: admin.rs  certification.rs  icrc21.rs  icrc3.rs  icrc_token.rs  lib.rs  liquidity.rs  logs.rs  math.rs  pool_guard.rs  state.rs  storage.rs  swap.rs  transfers.rs  types.rs
src/rumi_3pool/tests/: audit_2026_06_09_fixes.rs  audit_pocs_3p_recovery_and_token.rs  audit_pocs_b_01_pool_guard.rs  audit_pocs_b_01b_receive_donation_guard.rs  drain.rs  icrc3_hash_cache.rs  integration_test.rs  swap_fees_window.rs
src/rumi_3pool/tests/common/: mod.rs
src/rumi_3pool/tests/fixtures/: mainnet_snapshot_2026-04-07.json
src/rumi_analytics/: Cargo.toml  README.md  rumi_analytics.did
src/rumi_analytics/src/: http.rs  lib.rs  pull_schedule.rs  state.rs  storage.rs  timers.rs  types.rs
src/rumi_analytics/src/collectors/: fast.rs  holders.rs  hourly.rs  mod.rs  rollups.rs  stability.rs  tvl.rs  vaults.rs
src/rumi_analytics/src/http/: csv.rs  metrics.rs  mod.rs
src/rumi_analytics/src/queries/: address_value.rs  flow.rs  historical.rs  live.rs  mod.rs
src/rumi_analytics/src/sources/: amm.rs  backend.rs  icusd_ledger.rs  mod.rs  stability_pool.rs  three_pool.rs
src/rumi_analytics/src/storage/: balance_tracker.rs  cursors.rs  events.rs  fast.rs  holders.rs  hourly.rs  mod.rs  rollups.rs
src/rumi_analytics/src/tailing/: amm_liquidity.rs  amm_swaps.rs  backend_events.rs  icrc3.rs  mod.rs  stability_pool.rs  three_pool_liquidity.rs  three_pool_swaps.rs
src/rumi_analytics/tests/: audit_pocs_dos_010_stagger.rs  pocket_ic_analytics.rs
src/rumi_points/: Cargo.toml  DEPLOY_RUNBOOK.md  STATUS.md  rumi_points.did
src/rumi_points/src/: accrual.rs  epoch.rs  events.rs  lib.rs  main.rs  poll.rs  snapshot_seed.rs  source_types.rs  state.rs  types.rs  valuation.rs
src/rumi_points/tests/: pocket_ic_ingest.rs
src/rumi_points_e2e_source/: Cargo.toml
src/rumi_points_e2e_source/src/: lib.rs
src/rumi_protocol_backend/: Cargo.toml  rumi_protocol_backend.did
src/rumi_protocol_backend/src/: dashboard.rs  event.rs  guard.rs  health_monitor.rs  icrc21.rs  icrc3_proof.rs  lib.rs  liquidity_pool.rs  main.rs  management.rs  numeric.rs  state.rs  storage.rs  test_helpers.rs  tests.rs  treasury.rs  vault.rs  xrc.rs
src/rumi_protocol_backend/src/chains/: adapter.rs  admin.rs  collateral_config.rs  config.rs  interest.rs  liquidation.rs  liquidation_config.rs  mod.rs  multi_chain_state.rs  recovery.rs  settlement_queue.rs  supply.rs  tests_adapter.rs  tests_admin.rs  tests_config.rs  tests_multi_chain_state.rs  tests_multi_chain_state_v2.rs  tests_recovery.rs  tests_self_check.rs  tests_settlement_queue.rs  tests_supply.rs  tests_vault.rs  vault.rs
src/rumi_protocol_backend/src/chains/evm/: adapter.rs  burn_proof.rs  deposit_watch.rs  eip712.rs  evm_rpc.rs  hardening.rs  mod.rs  settlement.rs  settlement_proof.rs  tecdsa.rs  tests_adapter.rs  tests_burn_proof.rs  tests_deposit_watch.rs  tests_eip712.rs  tests_evm_rpc.rs  tests_hardening.rs  tests_settlement.rs  tests_settlement_proof.rs  tests_tecdsa.rs  tests_tx.rs  tx.rs
src/rumi_protocol_backend/src/chains/monad/: adapter.rs  burn_proof.rs  chain_vault.rs  (+19 more)
src/rumi_protocol_backend/tests/: amm1_pool_id.rs  audit_pocs_2026_06_09_redemption_userop_locks.rs  audit_pocs_async_001_005_liquidation_race.rs  audit_pocs_bk_001_002_concurrent_liquidation_pic.rs  audit_pocs_bk_001_002_per_vault_lock.rs  audit_pocs_bot_001_auto_cancel_balance.rs  audit_pocs_bot_001_auto_cancel_balance_pic.rs  audit_pocs_bot_001b_explicit_cancel_balance_pic.rs  audit_pocs_bot_002_swap_fail_cleanup_pic.rs  audit_pocs_cdp_01_oracle_circuit_breaker.rs  audit_pocs_cdp_03_per_collateral_fee.rs  audit_pocs_cdp_09_close_request_deque.rs  audit_pocs_cdp_10_sp_blacklist.rs  audit_pocs_cdp_12_followup_timer_setters.rs  audit_pocs_cdp_12_timer_split.rs  audit_pocs_cdp_14_xrc_source_floor.rs  audit_pocs_dos_005_check_vaults_shard.rs  audit_pocs_dos_006_007_aggregate_cache.rs  audit_pocs_dos_011_xrc_timer_lifecycle.rs  audit_pocs_dos_pagination.rs  audit_pocs_fee_curve.rs  audit_pocs_icc_002_3usd_refund.rs  audit_pocs_icc_007_durable_refund.rs  audit_pocs_icrc_idempotent.rs  audit_pocs_int_001_redemption_clamps_interest.rs  audit_pocs_int_002_concurrent_accrual.rs  audit_pocs_int_003_borrowing_fee_bound.rs  audit_pocs_int_004_withdraw_accrues_first.rs  audit_pocs_int_006_treasury_drain_concurrent.rs  audit_pocs_liq_001_pending_margin_race.rs  audit_pocs_liq_002_sorted_troves_index.rs  audit_pocs_liq_003_partial_liq_min_debt.rs  audit_pocs_liq_004_icrc3_burn_proof.rs  audit_pocs_liq_004_icrc3_burn_proof_pic.rs  audit_pocs_liq_005_deficit_account.rs  audit_pocs_liq_005_deficit_account_pic.rs  audit_pocs_liq_007_liquidation_frozen.rs  audit_pocs_liq_007_sanity_band.rs  audit_pocs_liq_008_circuit_breaker.rs  audit_pocs_liq_008_circuit_breaker_pic.rs  (+33 more)
src/rumi_treasury/: Cargo.toml  rumi_treasury.did
src/rumi_treasury/src/: lib.rs  state.rs  tests.rs  types.rs
src/sol_rpc_mock/: Cargo.toml
src/sol_rpc_mock/src/: lib.rs
src/stability_pool/: Cargo.toml  stability_pool.did
src/stability_pool/src/: deposits.rs  lib.rs  liquidation.rs  logs.rs  pool_guard.rs  state.rs  types.rs
src/stability_pool/tests/: audit_pocs_auth_001_anon_caller.rs  audit_pocs_dos_008_pool_events_clamp.rs  audit_pocs_ic_s_001_ar_s_002_icrc_004.rs  audit_pocs_sp_001_double_deduction.rs  audit_pocs_sp_reentrancy_and_realized.rs  audit_pocs_upg_001_decode_fallback.rs  audit_pocs_upg_006_reinstall_guard.rs  pocket_ic_3usd.rs
(+706 files in other folders)
