[package]
name = "flaky_ledger"
version = "0.1.0"
edition = "2021"
description = "Minimal ICRC-1/ICRC-2 ledger with configurable transfer failures for testing"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.6"
ic-cdk = "0.12.0"
ic-cdk-macros = "0.8.3"
serde = "1.0.210"
