[package]
name = "liquidation_bot"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
candid = "0.10.6"
ic-stable-structures = "0.6.5"
ic-cdk = "0.12.0"
ic-cdk-timers = "0.10.0"
serde = "1.0.210"
serde_json = "1.0"
ic-cdk-macros = "0.8.3"
ic-canister-log = { git = "https://github.com/Rumi-Protocol/ic", rev = "fc278709" }
icrc-ledger-types = { git = "https://github.com/Rumi-Protocol/ic", rev = "fc278709" }
