[package]
name = "rumi_3pool"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
candid = "0.10.6"
ic-cdk = "0.12.0"
ic-cdk-timers = "0.10.0"
ic-cdk-macros = "0.8.3"
ic-stable-structures = "0.6.7"
ic-canister-log = { git = "https://github.com/Rumi-Protocol/ic", rev = "fc278709" }
icrc-ledger-types = { git = "https://github.com/Rumi-Protocol/ic", rev = "fc278709" }
icrc-ledger-client-cdk = { git = "https://github.com/Rumi-Protocol/ic", rev = "fc278709" }
base64 = "0.22"
serde = "1.0.210"
serde_bytes = "0.11"
sha2 = "0.10"
ciborium = "0.2"
ethnum = "1.5"
num-traits = "0.2"

[dev-dependencies]
assert_matches = "1.3.0"
pocket-ic = "6.0.0"
serde_json = "1.0"

[features]
test_endpoints = []
