[package]
name = "rumi_analytics"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
candid = "0.10.6"
ic-cdk = "0.12.0"
ic-cdk-timers = "0.10.0"
ic-cdk-macros = "0.8.3"
ic-stable-structures = "0.6.7"
ic-canister-log = { git = "https://github.com/Rumi-Protocol/ic", rev = "fc278709" }
icrc-ledger-types = { git = "https://github.com/Rumi-Protocol/ic", rev = "fc278709" }
icrc-ledger-client-cdk = { git = "https://github.com/Rumi-Protocol/ic", rev = "fc278709" }
ic-canisters-http-types = { git = "https://github.com/Rumi-Protocol/ic", rev = "fc278709" }
serde = { version = "1.0.210", features = ["derive"] }
serde_bytes = "0.11"
ciborium = "0.2"
futures = "0.3"

[dev-dependencies]
pocket-ic = "6.0.0"
