[package]
name = "rumi_protocol_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rumi_protocol_backend"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[features]
self_check = []
test_endpoints = []

[dependencies]
candid = "0.10.6"
ic-stable-structures = "0.6.5"
ic-cdk = "0.12.0"
ic-cdk-timers = "0.10.0"
# serde / serde_json are HELD at 1.0.217 / 1.0.135 via the committed Cargo.lock.
# The IC fork's `ic-types` (dev-dep, rev fc278709) imports a `serde::__private`
# item removed after serde ~1.0.217, and serde_json >=1.0.150 transitively forces
# serde >=1.0.220 (which breaks the test build). The Solana tx crates only need
# serde "1.0", so they accept the pin. Do NOT `cargo update` serde/serde_json past
# these in this worktree without also updating the ic fork.
serde = "1.0.210"
futures = "0.3.28"
ciborium = "0.2.1"
ic0 = "0.18.9"
sha2 = "0.10.2"
async-trait = "0.1"
ic-cdk-macros = "0.8.3"
ic-xrc-types = "1.0.0"
ic-canisters-http-types = { git = "https://github.com/Rumi-Protocol/ic", rev = "fc278709" }
ic-canister-log = { git = "https://github.com/Rumi-Protocol/ic", rev = "fc278709" }
icrc-ledger-types = { git = "https://github.com/Rumi-Protocol/ic", rev = "fc278709" }
icrc-ledger-client-cdk = { git = "https://github.com/Rumi-Protocol/ic", rev = "fc278709" }
rust_decimal = "1.32.0"
rust_decimal_macros = "1.32"
serde_bytes = "0.11"
serde_json = "1.0.96"
num-traits = "0.2"
ic-metrics-encoder = "1"
candid_parser = "0.1"
ic-management-canister-types = { git = "https://github.com/Rumi-Protocol/ic", rev = "fc278709" }
ic-icrc1-ledger = { git = "https://github.com/Rumi-Protocol/ic", rev = "fc278709" }
ic-ledger-canister-core = { git = "https://github.com/Rumi-Protocol/ic", rev = "fc278709" }
k256 = { version = "0.13", default-features = false, features = ["ecdsa", "arithmetic"] }
sha3 = "0.10"
hex = "0.4"
bs58 = "0.5"
alloy-rlp = "0.3"
# Solana primitive crates for tx-building (message / instruction / transfer /
# nonce construction). Verified wasm32-unknown-unknown compatible and coexisting
# with candid 0.10 / ic-cdk 0.12 (no conflict). The SPL crates (spl-token,
# spl-associated-token-account) are deliberately NOT used: they pull
# spl-token-2022's confidential-transfer crypto (aes-gcm-siv, etc.) which is
# wasm-risky and heavy; the MintTo and ATA-create instructions are hand-encoded
# in chains/solana/tx.rs instead (simple, well-defined byte layouts).
solana-pubkey = { version = "4", default-features = false }
solana-instruction = { version = "3", default-features = false }
solana-message = { version = "4", default-features = false }
solana-transaction = { version = "4", default-features = false }
solana-system-interface = { version = "3", default-features = false }
# TODO(Task 6): add evm_rpc_client once source confirmed — evm_rpc_client 0.4.0 pulls
# ic-cdk 0.19 which conflicts with this project's ic-cdk 0.12. Needs a fork/patch
# or a DFINITY-provided wasm-compat shim at the same ic-cdk version.

[dev-dependencies]
assert_matches = "1.3.0"
ic-base-types = { git = "https://github.com/Rumi-Protocol/ic", rev = "fc278709" }
ic-state-machine-tests = { git = "https://github.com/Rumi-Protocol/ic", rev = "fc278709" }
lazy_static = "1.4.0"
xrc-mock = { git = "https://github.com/Rumi-Protocol/ic", rev = "fc278709" }
rand = "0.8.5"
pocket-ic = "6.0.0"
proptest = "1.0"
flate2 = "1.0"

