[package]
name = "rumi_protocol_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rumi_protocol_backend"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[features]
self_check = []
test_endpoints = []

[dependencies]
candid = "0.10.6"
ic-stable-structures = "0.6.5"
ic-cdk = "0.12.0"
ic-cdk-timers = "0.10.0"
# serde / serde_json are HELD at 1.0.217 / 1.0.135 via the committed Cargo.lock.
# The IC fork's `ic-types` (dev-dep, rev fc278709) imports a `serde::__private`
# item removed after serde ~1.0.217, and serde_json >=1.0.150 transitively forces
# serde >=1.0.220 (which breaks the test build). The Solana tx crates only need
# serde "1.0", so they accept the pin. Do NOT `cargo update` serde/serde_json past
# these in this worktree without also updating the ic fork.
serde = "1.0.210"
futures = "0.3.28"
ciborium = "0.2.1"
ic0 = "0.18.9"
sha2 = "0.10.2"
async-trait = "0.1"
ic-cdk-macros = "0.8.3"
ic-xrc-types = "1.0.0"
ic-canisters-http-types = { git = "https://github.com/Rumi-Protocol/ic", rev = "fc278709" }
ic-canister-log = { git = "https://github.com/Rumi-Protocol/ic", rev = "fc278709" }
icrc-ledger-types = { git = "https://github.com/Rumi-Protocol/ic", rev = "fc278709" }
icrc-ledger-client-cdk = { git = "https://github.com/Rumi-Protocol/ic", rev = "fc278709" }
rust_decimal = "1.32.0"
rust_decimal_macros = "1.32"
# 256-bit ints for the UniswapV2 swap math: amount_in * reserve_out overflows
# u128 at 18-decimal token magnitudes (~1e48). Already in the dep tree.
ethnum = "1.5"
serde_bytes = "0.11"
serde_json = "1.0.96"
num-traits = "0.2"
ic-metrics-encoder = "1"
candid_parser = "0.1"
ic-management-canister-types = { git = "https://github.com/Rumi-Protocol/ic", rev = "fc278709" }
ic-icrc1-ledger = { git = "https://github.com/Rumi-Protocol/ic", rev = "fc278709" }
ic-ledger-canister-core = { git = "https://github.com/Rumi-Protocol/ic", rev = "fc278709" }
k256 = { version = "0.13", default-features = false, features = ["ecdsa", "arithmetic"] }
sha3 = "0.10"
hex = "0.4"
# `check` feature enables Base58Check (with_check_version / with_check), which the
# XRPL classic-address codec needs (chains/xrp/address.rs). It pulls `sha2` (already
# a direct dep) and no serde, so the serde 1.0.217 pin holds. Plain Solana base58
# (chains/solana) does not use `check`; enabling it is purely additive.
bs58 = { version = "0.5", features = ["check"] }
# RIPEMD-160 for the XRPL AccountID = RIPEMD160(SHA256(0xED ‖ pubkey)) derivation
# (chains/xrp/address.rs). Tiny, no_std-capable, wasm32 compatible, no serde — the
# only hash the codebase needs beyond sha2/sha3/k256.
ripemd = "0.1"
rumi_cycle_manager = { path = "../rumi_cycle_manager" }
# base64 for Solana sendTransaction wire encoding. Resolves to 0.22.1 (already a
# transitive dep), so adding it as a direct dep does not shift resolution. The
# `alloc` feature is enough for the canister (no std-only APIs needed).
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
alloy-rlp = "0.3"
# Solana primitive crates for tx-building (message / instruction / transfer /
# nonce construction). Verified wasm32-unknown-unknown compatible and coexisting
# with candid 0.10 / ic-cdk 0.12 (no conflict). The SPL crates (spl-token,
# spl-associated-token-account) are deliberately NOT used: they pull
# spl-token-2022's confidential-transfer crypto (aes-gcm-siv, etc.) which is
# wasm-risky and heavy; the MintTo and ATA-create instructions are hand-encoded
# in chains/solana/tx.rs instead (simple, well-defined byte layouts).
# curve25519 feature unlocks Pubkey::find_program_address / create_program_address
# (PDA derivation, used for SPL Associated Token Account addresses). Off-chain it
# pulls curve25519-dalek + sha2 for the ed25519 off-curve check; both are already
# resolved in Cargo.lock, wasm32-unknown-unknown compatible, and do NOT activate
# the serde feature, so the serde 1.0.217 pin holds.
solana-pubkey = { version = "4", default-features = false, features = ["curve25519"] }
solana-instruction = { version = "3", default-features = false }
solana-message = { version = "4", default-features = false }
solana-transaction = { version = "4", default-features = false }
solana-system-interface = { version = "3", default-features = false }
# TODO(Task 6): add evm_rpc_client once source confirmed — evm_rpc_client 0.4.0 pulls
# ic-cdk 0.19 which conflicts with this project's ic-cdk 0.12. Needs a fork/patch
# or a DFINITY-provided wasm-compat shim at the same ic-cdk version.

[dev-dependencies]
assert_matches = "1.3.0"
ic-base-types = { git = "https://github.com/Rumi-Protocol/ic", rev = "fc278709" }
ic-state-machine-tests = { git = "https://github.com/Rumi-Protocol/ic", rev = "fc278709" }
lazy_static = "1.4.0"
xrc-mock = { git = "https://github.com/Rumi-Protocol/ic", rev = "fc278709" }
rand = "0.8.5"
pocket-ic = "6.0.0"
proptest = "1.0"
flate2 = "1.0"
# Host-side verification of the threshold-Ed25519 signature in the M2 sign test.
# 2.1.1 already resolves in the lock transitively; default features (fast/std/
# zeroize) do NOT activate its optional serde dep, so the serde 1.0.217 pin holds.
# This is a dev-dependency, so it does not affect the wasm artifact.
ed25519-dalek = "2.1.1"
